--- a/public/css/article.css
+++ b/public/css/article.css
@@ -20,6 +20,10 @@ code {
     font-family: 'Roboto Mono', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', 'courier new', monospace;
 }
 
+blockquote {
+	color: #999;
+	border-left: 5px solid #64b5f6;
+}
 .tip-image {
 	height: 240px;
 	margin: 12px;
